# OpenTransLive

./: README.en.md  README.md  SECURITY_IMPROVEMENTS.md  milestone.en.md  milestone.md  test_session_validation.py
docs/: USAGE.en.md  USAGE.md
live_server/: .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  main.py  pyproject.toml  rooms.db
live_server/app/: __init__.py  api_key.py  config.example.py  config.py  database.py  email_auth.py  http_client.py  logger_config.py  scribe_manager.py  socket_schema.py  translation_service.py  translator.py
live_server/app/secret/: config.example.toml  models.example.toml
live_server/app/static/js/: audio-processor.js  live.js  realtime.js
live_server/app/templates/: base.html  client.html  dashboard.html  edit_transcriptions.html  index.html  live.html  login.html  panel.html  realtime.html  rt.html  user_dashboard.html  yt.html
live_server/app/templates/assets/: style.css
live_server/app/translators/: __init__.py  base.py  composite.py  gemini.py  groq.py  openai.py  providers.py
realtime_client/: .env.example  .gitignore  README.en.md  README.md  elevenlabs_realtime.py  google_stt_v2.py  pyproject.toml  run.py
realtime_transcribe_client/: .env.example  pyproject.toml  run.py
realtime_transcribe_server/: .env.example  .gitignore  README.md  pyproject.toml
realtime_transcribe_server/app/: __init__.py
realtime_transcribe_server/app/templates/: base.html  index.html  rt.html  yt.html
realtime_transcribe_server/app/templates/assets/: style.css
transcribe_client/: .env.example  README.en.md  README.md  pyproject.toml  run.py
utils/: transcriptions2srt.py
