[project]
name = "opentranslive-server"
version = "0.1.0"
description = "A FastAPI-based web server that provides real-time transcription display, translation management, and WebSocket communication for the OpenTransLive system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.126.0",
    "fastapi-limiter==0.1.6",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pymongo>=4.15.5",
    "python-socketio>=5.15.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "cachetools>=5.0.0",
]
